some css property applied

--- a/html6717.html
+++ b/html6717.html
@@ -1,11 +1,22 @@
 <html>
  <head>
   <title>Dash</title>
+   <style>
+   body
+   {
+        background :black
+   }
+   p
+   {
+     font-size:20px
+   }
+   </style>
  </head>
  <body>
-    <h1>Shiva</h1>
-    <p>welcome buddy!!!</p>
+    <h1 style = "color: white">Shiva</h1>
+    <p style = "color :white">welcome buddy!!!</p>
     <input type="email" placeholder="Enter your e-mail">
     <input type="submit">
  </body>	 
-</html>
+</html
+>
